# OhjProjektiTITE23

./: .gitignore  CMakeLists.txt  Game.cpp  Makefile  README.md  rakenteensunnittelu.txt  vaatimukset.md  viikkoraportti.md
include/: Character.h  Enemy.h  Game.h  HealthBar.h  Menu.h  Nappi.h  Player.h  Projectile.h  Scene.h  SoundManager.h  Text.h  TextureManager.h  UIElement.h  Wand.h  Weapon.h
src/: Cell.cpp  Character.cpp  Enemy.cpp  Game.cpp  Grid.cpp  Menu.cpp  Nappi.cpp  Player.cpp  Projectile.cpp  Scene.cpp  SoundManager.cpp  Text.cpp  TextureManager.cpp  UIElement.cpp  Wand.cpp  main.cpp
